# Compiler-Project

./: .input.txt.swp  CMakeLists.txt  README.md  grammer.txt  input.txt  input_test.txt  makeBuild.sh  makeRun.sh  project_lib.c  project_lib.cpp  rtMAS.c
code/: AST.h  CMakeLists.txt  Error.cpp  Error.h  Lexer.cpp  Parser.cpp  Parser.h  code_generator.cpp  code_generator.h  error.cpp  error.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  semantic.cpp  semantic.h
